syntax = "proto3";
package overlord;

import "device.proto";


service YeelightConnector {
    rpc discover_devices(DiscoverDevicesRequest) returns (AckResponse) {}
    rpc get_devices(GetDevicesRequest) returns (Devices) {}
    rpc toggle(ToggleRequest) returns (AckResponse) {}
    rpc set_rgb(SetRgbRequest) returns (AckResponse) {}
    rpc set_hsv(SetHsvRequest) returns (AckResponse) {}
    rpc set_brightness(SetBrightnessRequest) returns (AckResponse) {}
    rpc enable_music_mode(EnableMusicModeRequest) returns (AckResponse) {}
    rpc disable_music_mode(DisableMusicModeRequest) returns (AckResponse) {}
    rpc listen_to_notifications(StartNotificationStream) returns (stream DeviceEvent) {}
}
